[+] Support for Ongeki Re:Fresh (#133)
* [+] Minimum working support for Ongeki Re:Fresh

* [+] Re:Fresh: Add user event map and missing fields

* [+] Re:Fresh: Extract user skin